# BasicBedrock

./: .gitignore  LICENSE  README.md  makedocs.bat  makedocs.sh  pyproject.toml
docs/: basicbedrock.basicbedrock.md  basicbedrock.md  basicbedrock.models.amazon.md  basicbedrock.models.anthropic.md  basicbedrock.models.baseclasses.md  basicbedrock.models.cohere.md  basicbedrock.models.md  basicbedrock.models.meta.md  basicbedrock.models.mistral.md  overview.md  usage.md
docs/autogen/: basicbedrock.basicbedrock.md  basicbedrock.guardrails.md  basicbedrock.guardrails_baseclasses.md  basicbedrock.md  basicbedrock.models.ai21.md  basicbedrock.models.amazon.md  basicbedrock.models.anthropic.md  basicbedrock.models.baseclasses.md  basicbedrock.models.cohere.md  basicbedrock.models.md  basicbedrock.models.meta.md  basicbedrock.models.mistral.md  overview.md
example/: params.py  quickstart.py  simple.py
examples/: guardrails.py  more_params.py  simple.py  simpleparams.py  two_way_chat.py
src/basicbedrock/: __init__.py  basicbedrock.py  guardrails.py
src/basicbedrock/guardrails/: __init__.py  baseclasses.py  guardrails.py
src/basicbedrock/models/: __init__.py  ai21.py  amazon.py  anthropic.py  baseclasses.py  cohere.py  meta.py  mistral.py
test/: test_basicbedrock.py  test_guardrails.py  tests.py
