[project]
name = "basicbedrock"
version = "0.2.2"
authors = [
  { name="cyberitech", email="mattsod@kaizencyber.io" },
]
maintainers = [
    { name="cyberitech", email="mattsod@kaizencyber.io" },
]
description = "An abstraction layer for AWS Bedrock.  Removes the need to keep track of response/request schemas."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "boto3>=1.34.94",
    "pydantic>=2.6.4",
]

[project.urls]
Homepage = "https://github.com/cyberitech/BasicBedrock"
Issues = "https://github.com/cyberitech/BasicBedrock/issues"